# grouped_sampling

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  bloom_demo_working.ipynb  classes_final_project.dot  colab_demo.ipynb  cometml_key.py  create_models.ipynb  dev-requirements.txt  embeddings_ispection.ipynb  final-project-evaluation-good.ipynb  fix_bitsandbytes.py  globals.py  model_wrapper.py  open_mercury_demo.py  open_web_app.py  profiling.ipynb  project_demo.ipynb  project_requirements.txt  publish_new_version.py  pyproject.toml  repetition_penalty.py  requirements.txt  run_docker_on_cloud.sh  run_tests.py  sample_generator.py  sampling_generator.py  test_generators.py  test_get_tokenizer.py  text_generator.py  tree_generator.py
documents/: README.md  classes_grouped_sampling.plantuml  ~$בודה עצמה.docx  ~$ישורים.docx  (+12 more)
src/: README.md  __init__.py  generation_type.py  model_wrapper.py  pyproject.toml  repetition_penalty.py  sampling_generator.py  text_generator.py  tree_generator.py  types.py
src/grouped_sampling/: __init__.py  base_pipeline.py  batch_end_to_end_pipeline.py  batch_pipeline.py  completion_dict.py  config.py  end_to_end_pipeline.py  end_to_end_probability_processor.py  generation_type.py  generation_utils.py  llama_tokenizer.py  logits_vec_to_token.py  model.py  model_to_tokenizer.json  model_wrapper.py  postprocessor.py  preprocessor.py  probability_processor.py  pyproject.toml  repetition_penalty.py  requirements.txt  return_many_pipeline.py  return_one_pipeline.py  sampling_generator.py  sampling_pipeline.py  sampling_stradegy.py  softmax.py  support_check.py  text_generator.py  token_ids.py  tokenizer.py  tokens_to_tokens_pipeline.py  top_k.py  top_p.py  tree_generator.py  tree_pipeline.py  unsupported_models.txt  unsupported_organizations.txt
src/grouped_sampling/llama/: __init__.py  configuration_llama.py  modeling_llama.py  tokenization_llama.py
(+123 files in other folders)
