[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["dependencies"]
name = "grouped-sampling"
version = "1.0.0"
description = "A faster algorithem for generating texts with cuasal language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
keywords = [
    "nlp",
    "language-model",
    "text-generation",
    "cuasal-language-model",
    "cuasal-text-generation",
    "gpt",
    "GPT",
    "natural-language-processing",
    "NLP",
]
authors = [
    {name = "Yoni Kremer", email = "yoni.kremer@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
