[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
dynamic = [ "dependencies",]
name = "grouped_sampling"
version = "1.0.20"
description = "A faster algorithm for generating texts with cuasal language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
keywords = [ "nlp", "language-model", "text-generation", "cuasal-language-model", "cuasal-text-generation", "gpt", "GPT", "natural-language-processing", "NLP",]
classifiers = [ "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Topic :: Software Development :: Libraries :: Python Modules",]
[[project.authors]]
name = "Yoni Kremer"
email = "yoni.kremer@gmail.com"

[tool.pytest.ini_options]
filterwarnings = [ "ignore::DeprecationWarning", "ignore:CUDA is not available, using CPU:UserWarning",]

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]
